[gd_scene load_steps=3 format=3 uid="uid://cgosus8aaqfe4"]

[ext_resource type="Script" path="res://Errors/ErrorMessage.gd" id="1_1h1qg"]
[ext_resource type="Script" path="res://Errors/ErrorLabel.gd" id="1_ysa0p"]

[node name="ErrorMessage" type="MarginContainer"]
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("1_1h1qg")
error_info = PackedStringArray()
error_message = "action number 1"
error_stack_trace = PackedStringArray()

[node name="ReferenceRect" type="ReferenceRect" parent="."]
layout_mode = 2
border_color = Color(0.658824, 0.658824, 0.658824, 1)
editor_only = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "

___
#####################################################
ERROR in
action number 1
#####################################################
"
script = ExtResource("1_ysa0p")
error_info = PackedStringArray()
error_message = "action number 1"
error_stack_trace = PackedStringArray()

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Copy Error"

[node name="DateLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
text = "YYYY-MM-DD @ HH-MM-SS"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/Button" to="." method="_on_button_pressed"]
